--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 safety, and innovative engineering solutions that make a real impact.
               </p>
               <div class="text-start mt-4">
-                  <a href="Shpendi_CV (1).pdf" class="btn btn-primary" target="_blank">View My CV</a>
+                  <a href="SHPENDI_CV.pdf" class="btn btn-primary" target="_blank">View My CV</a>
               </div>
           </div>
         </div>
